--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <form id="formUsuario" class="p-8">
                 <h2 class="text-2xl font-bold mb-6">Adicionar Novo Usuário</h2>
                 <div class="space-y-4">
-                    <div><label class="block text-sm font-medium">Usuário</label><input type="text" name="username" required class="mt-1 block w-full p-2 border rounded-lg"></div>
+                    <div><label class="block text-sm font-medium">Usuário</label><input type="text" name="username" required class="mt-1 block w-full p-2 border border-gray-300 rounded-lg"></div>
                     <div><label class="block text-sm font-medium">Email</label><input type="email" name="email" required class="mt-1 block w-full p-2 border border-gray-300 rounded-lg"></div>
                     <div><label class="block text-sm font-medium">Senha</label><input type="password" name="password" required class="mt-1 block w-full p-2 border border-gray-300 rounded-lg"></div>
                     <div><label class="block text-sm font-medium">Nível de Acesso</label><select name="role" class="mt-1 block w-full p-2 border rounded-lg"><option value="common">Comum</option><option value="master">Master</option></select></div>
@@ -201,7 +201,6 @@
           messagingSenderId: "877422312225",
           appId: "1:877422312225:web:b600eaae6f06a752575c60"
         };
-        const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
         const auth = getAuth(app);
@@ -235,7 +234,7 @@
         onAuthStateChanged(auth, async (user) => {
             if (user) {
                 currentUser = user;
-                const userDocRef = doc(db, "artifacts", appId, "public", "data", "usuarios", user.uid);
+                const userDocRef = doc(db, "usuarios", user.uid);
                 try {
                     const userDoc = await getDoc(userDocRef);
                     if (userDoc.exists()) {
@@ -245,7 +244,7 @@
                         mainAppScreen.classList.remove('hidden');
                         await iniciarSistema();
                     } else {
-                        loginError.textContent = "Perfil de usuário não encontrado no banco de dados.";
+                        loginError.textContent = "Perfil de usuário não encontrado no banco de dados. Contate o administrador.";
                         await signOut(auth);
                     }
                 } catch (error) {
@@ -283,7 +282,7 @@
         async function iniciarSistema() {
             loadingEl.style.display = 'block';
             for (const name of collections) {
-                const q = query(collection(db, "artifacts", appId, "public", "data", name));
+                const q = query(collection(db, name));
                 const snapshot = await getDocs(q);
                 if (['estoque', 'historico'].includes(name)) {
                     caches[name] = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
