--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         .report-nav-btn-active { background-color: #2563eb; color: white; }
         .report-nav-btn { background-color: #f3f4f6; color: #374151; }
         .report-nav-btn:hover { background-color: #e5e7eb; }
-        .filter-active { background-color: #e0e7ff; border-color: #4f46e5; }
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
@@ -70,7 +69,7 @@
                     </div>
                     <div class="flex items-center ml-4">
                          <span id="username-display" class="text-sm text-gray-500 mr-4 font-semibold"></span>
-                         <button id="logout-btn" data-action="logout" class="text-sm text-red-500 hover:text-red-700 font-medium flex items-center"><i class="fas fa-sign-out-alt mr-1"></i>Sair</button>
+                         <button data-action="logout" class="text-sm text-red-500 hover:text-red-700 font-medium flex items-center"><i class="fas fa-sign-out-alt mr-1"></i>Sair</button>
                     </div>
                 </div>
             </div>
