--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         .report-nav-btn-active { background-color: #2563eb; color: white; }
         .report-nav-btn { background-color: #f3f4f6; color: #374151; }
         .report-nav-btn:hover { background-color: #e5e7eb; }
-        .filter-active { background-color: #e0e7ff; border-color: #4f46e5; }
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
@@ -177,7 +176,7 @@
             <form id="formUsuario" class="p-8">
                 <h2 class="text-2xl font-bold mb-6">Adicionar Novo Usuário</h2>
                 <div class="space-y-4">
-                    <div><label class="block text-sm font-medium">Usuário</label><input type="text" name="username" required class="mt-1 block w-full p-2 border rounded-lg"></div>
+                    <div><label class="block text-sm font-medium">Usuário</label><input type="text" name="username" required class="mt-1 block w-full p-2 border border-gray-300 rounded-lg"></div>
                     <div><label class="block text-sm font-medium">Email</label><input type="email" name="email" required class="mt-1 block w-full p-2 border border-gray-300 rounded-lg"></div>
                     <div><label class="block text-sm font-medium">Senha</label><input type="password" name="password" required class="mt-1 block w-full p-2 border rounded-lg"></div>
                     <div><label class="block text-sm font-medium">Nível de Acesso</label><select name="role" class="mt-1 block w-full p-2 border rounded-lg"><option value="common">Comum</option><option value="master">Master</option></select></div>
@@ -241,7 +240,7 @@
         function renderizarHeader(title, buttonInfo = null) {
             let buttonHtml = '';
             if (buttonInfo && (currentUserRole === 'master' || buttonInfo.action !== 'abrir-modal-usuario')) {
-                buttonHtml = `<button data-action="${buttonInfo.action}" class="bg-blue-600 text-white font-bold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 flex items-center"><i class="${buttonInfo.icon} mr-2"></i>${buttonInfo.text}</button>`;
+                buttonHtml = `<button data-action="${buttonInfo.action}" data-collection="${buttonInfo.collection || ''}" class="bg-blue-600 text-white font-bold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 flex items-center"><i class="${buttonInfo.icon} mr-2"></i>${buttonInfo.text}</button>`;
             }
             viewHeader.innerHTML = `
                 <div><h1 class="text-2xl font-bold text-gray-800">${title}</h1></div>
